--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -24,7 +24,8 @@ ul.main-menu li.menu-dismiss { position: absolute; top: 5px; right: 5px; font-si
 .mobile-style-default #navigation ul.main-menu li .menu-toggle { padding-right: 0.8333em; }
 .mobile-style-default #navigation ul.main-menu li { border-bottom: 1px solid $light-gray; }
 .mobile-style-default #navigation li ul.main-menu li { border-bottom: none; }
-.mobile-style-default #navigation ul.main-menu li.first { padding-right: 2em; } 
+.mobile-style-default #navigation ul.main-menu li.first { padding-right: 2em; }
+.mobile-style-default #navigation li ul.main-menu li.first { padding-right: 0; }
 .mobile-style-default #navigation ul.main-menu li.menu-dismiss { font-size: 1.5em; border-bottom: none; }
 .mobile-style-default #navigation > ul.main-menu.open { left: 0; }
 .mobile-style-default #navigation ul.main-menu span.separator hr { border-width: 3px; }
